--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </li>
                 </ul>
               </div>
-       
+       <!--Team Section-->
        </section>
        <section class="section team ">
         <div class="container container-team ">
@@ -103,7 +103,7 @@
                         <p class="team-text">Product Designer</p>
                         <ul class="team-second-list">
                             <li class="team-link"><a href="" class="team-link-icon" target="_blank"><svg class="team-icon" width="16"
-                                height="16";>
+                                height="16">
                             <use href="./images/icons.svg#icon-instagram"></use></svg> </a></li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon" target="_blank">
@@ -115,7 +115,7 @@
                             </li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon" target="_blank">
-                                    <svg class="team-icon"width="16"
+                                    <svg class="team-icon" width="16"
                                     height="16" >
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
@@ -123,7 +123,7 @@
                             </li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon">
-                                    <svg class="team-icon"width="16"
+                                    <svg class="team-icon" width="16"
                                     height="16" >
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -141,7 +141,7 @@
                         <p class="team-text">Frontend Developer</p>
  <ul class="team-second-list">
     <li class="team-link"><a href="" class="team-link-icon" target="_blank"><svg class="team-icon" width="16"
-        height="16";>
+        height="16">
     <use href="./images/icons.svg#icon-instagram"></use></svg> </a></li>
     <li class="team-link">
         <a href="" class="team-link-icon" target="_blank">
@@ -153,7 +153,7 @@
     </li>
     <li class="team-link">
         <a href="" class="team-link-icon" target="_blank">
-            <svg class="team-icon"width="16"
+            <svg class="team-icon" width="16"
             height="16" >
         <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
@@ -161,7 +161,7 @@
     </li>
     <li class="team-link">
         <a href="" class="team-link-icon">
-            <svg class="team-icon"width="16"
+            <svg class="team-icon" width="16"
             height="16" >
             <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
@@ -178,7 +178,7 @@
                         <p class="team-text">Marketing</p>
                         <ul class="team-second-list">
                             <li class="team-link"><a href="" class="team-link-icon" target="_blank"><svg class="team-icon" width="16"
-                                height="16";>
+                                height="16">
                             <use href="./images/icons.svg#icon-instagram"></use></svg> </a></li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon" target="_blank">
@@ -190,7 +190,7 @@
                             </li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon" target="_blank">
-                                    <svg class="team-icon"width="16"
+                                    <svg class="team-icon" width="16"
                                     height="16" >
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
@@ -198,7 +198,7 @@
                             </li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon">
-                                    <svg class="team-icon"width="16"
+                                    <svg class="team-icon" width="16"
                                     height="16" >
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -215,7 +215,7 @@
                         <p class="team-text">UI Designer</p>
                         <ul class="team-second-list">
                             <li class="team-link"><a href="" class="team-link-icon" target="_blank"><svg class="team-icon" width="16"
-                                height="16";>
+                                height="16">
                             <use href="./images/icons.svg#icon-instagram"></use></svg> </a></li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon" target="_blank">
@@ -227,7 +227,7 @@
                             </li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon" target="_blank">
-                                    <svg class="team-icon"width="16"
+                                    <svg class="team-icon" width="16"
                                     height="16" >
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
@@ -235,7 +235,7 @@
                             </li>
                             <li class="team-link">
                                 <a href="" class="team-link-icon">
-                                    <svg class="team-icon"width="16"
+                                    <svg class="team-icon" width="16"
                                     height="16" >
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
