--- a/index.html
+++ b/index.html
@@ -342,19 +342,19 @@
            <div class="social-block">
             <p class="text">Social media</p>
             <ul class="footer-icon-list">
-                <li> <a class="footer-link-icon" href="" target="_blank">
+                <li class="footer-icon-li"> <a class="footer-link-icon" href="" target="_blank">
                     <svg class="footer-icon" width="24"
                     height="24">
                 <use href="./images/icons.svg#icon-instagram"></use></svg>
                 </a>
             </li>
-                <li><a class="footer-link-icon" href="" target="_blank">
+                <li class="footer-icon-li"><a class="footer-link-icon" href="" target="_blank">
                     <svg class="footer-icon" width="24"
                     height="24">
                 <use href="./images/icons.svg#icon-twitter"></use></svg>
                 </a>
             </li>
-                <li>
+                <li class="footer-icon-li">
                     <a class="footer-link-icon" href="" target="_blank">
                         <svg class="footer-icon" width="24"
                         height="24" >
@@ -362,7 +362,7 @@
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="footer-icon-li">
                     <a class="footer-link-icon" href="" target="_blank">
                         <svg class="footer-icon" width="24"
                         height="24" >
