--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
     
     <title>Document</title>
 </head>
@@ -17,9 +18,9 @@
          <nav class="nav">
         <a class="logo" href="/index.html">Web<span class="logo-span">Studio</span></a>
         <ul class="nav-list">
-            <li><a href="./index.html" class="link">Studio</a></li>
-            <li><a href="" class="link">Portfolio</a></li>
-            <li><a href="" class="link">Contacts</a></li>
+            <li><a href="./index.html" class="link link-studio curennt-page-link">Studio</a></li>
+            <li><a href="" class="link link-portfolio">Portfolio</a></li>
+            <li><a href="" class="link link-contacts">Contacts</a></li>
         </ul>
     </nav>
    <address class="address">
